--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,5 +1,14 @@
 .App {
+  min-width: 100%;
   text-align: center;
+  align-items: center;
+  height: 100%;
+  background: whitesmoke;
+  height: 100%;
+  position: absolute;
+  left: 0;
+  width: 100%;
+  overflow: hidden;
 }
 
 .App-logo {
@@ -9,14 +18,20 @@
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  background-color: black;
+  min-height: 40px;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  font-family: Arial, Helvetica, sans-serif;
   font-size: calc(10px + 2vmin);
   color: white;
+}
+
+.App-Component {
+  margin: 100px auto 0 auto;
+  width: 600px;
 }
 
 .App-link {
